--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ h3{
 }
 
 h4{
+    margin-top: 0;
     margin-bottom: 5px;
 }
 
@@ -28,6 +29,7 @@ h4{
     align-items: center;
 }
 
+
 .today{
     text-align: center;
     padding-bottom: 10px;
@@ -37,7 +39,7 @@ h4{
     height: 80px;
     width: 80px;
     padding:10px;
-    margin: 10px;
+    margin: 5px;
     border-radius: 10px;
     background-color: rgb(252, 175, 175, 0.5);
 }
