--- a/style.css
+++ b/style.css
@@ -12,12 +12,15 @@ h1, h3, h4{
     text-align: center;
 }
 
+h1{
+    margin-bottom: 0;
+}
 h3{
     margin: 0;
 }
 
 h4{
-    margin-top: 0;
+    margin-top: 0.5;
     margin-bottom: 5px;
 }
 
