--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ h4{
     align-items: center;
 }
 
-
 .today{
     text-align: center;
     padding-bottom: 10px;
@@ -62,8 +61,29 @@ h4{
     border-right: 2px solid rgb(209, 5, 5);
 }
 
-@media (min-width:768px){
+@media(min-width:480px){
+    .countdown{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        text-align: center;
+        justify-content: space-between;
+        align-items: center;
+    }
 
+
+    main{
+        align-items: center;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+    }
+
+}
+
+
+
+
+@media (min-width:768px){
     body{
         background-image: url("xmas-landscape.jpg");
         background-position: center-bottom;
@@ -77,7 +97,9 @@ h4{
     h4, h3, .today{
         font-size: 30px;
     }
+
     .countdown{
+        display: flex;
         flex-direction: row;
     }
 
